--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "framer-motion": "^10.16.4",
     "geist": "^1.0.1",
     "next": "^14.0.0",
     "react": "18.2.0",
