--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "sonner": "^1.2.0",
     "superjson": "^1.13.1",
     "zod": "^3.22.4"
   },
