--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
     "sonner": "^1.2.0",
     "superjson": "^1.13.1",
