--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.11.0",
     "sonner": "^1.2.0",
     "superjson": "^1.13.1",
+    "svix": "^1.14.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
