--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
   "dependencies": {
     "@clerk/nextjs": "^4.27.1",
     "@hookform/resolvers": "^3.3.2",
-    "@prisma/client": "^5.1.1",
+    "@prisma/client": "^5.7.1",
     "@t3-oss/env-nextjs": "^0.7.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "@uploadthing/react": "^6.0.2",
     "framer-motion": "^10.16.4",
     "geist": "^1.0.1",
     "next": "^14.0.0",
@@ -33,6 +34,7 @@
     "sonner": "^1.2.0",
     "superjson": "^1.13.1",
     "svix": "^1.14.0",
+    "uploadthing": "^6.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -60,7 +62,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.1.1",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.3",
     "ts-jest": "^29.1.1",
     "typescript": "^5.1.6"
