added createdAt to recruitment schema + finished cards view

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "@uploadthing/react": "^6.0.2",
+    "dayjs": "^1.11.10",
     "framer-motion": "^10.16.4",
     "geist": "^1.0.1",
     "next": "^14.0.0",
