--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
     "@uploadthing/react": "^6.1.0",
+    "canvas": "^2.11.2",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.17.12",
     "geist": "^1.2.0",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
+    "react-pdf": "^7.7.0",
     "sonner": "^1.3.1",
     "superjson": "^1.13.3",
     "svix": "^1.15.0",
@@ -64,6 +66,7 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "prisma": "^5.8.0",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
