--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@clerk/nextjs": "^4.29.2",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.8.0",
+    "@sendgrid/mail": "^8.1.1",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.37.1",
